[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/items/chest.png" type="Texture" id=1]
[ext_resource path="res://scenes/items/Chest.gd" type="Script" id=2]
[ext_resource path="res://scenes/collisions/InteractArea.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.28638
height = 5.6235

[sub_resource type="Animation" id=2]
resource_name = "close"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "open"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20, 20 )

[node name="Chest" type="StaticBody2D"]
position = Vector2( -288, -152 )
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/close = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/open = SubResource( 4 )

[node name="InteractArea" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="InteractArea" index="0"]
shape = SubResource( 5 )

[node name="HintPosition" parent="InteractArea" index="1"]
position = Vector2( 0, -15 )
[connection signal="interact" from="InteractArea" to="." method="_on_InteractArea_interact"]
[connection signal="interact_end" from="InteractArea" to="." method="_on_InteractArea_interact_end"]

[editable path="InteractArea"]
